# Delta_ROS2

./: .gitattributes  .gitignore  README.md  requirements-ui.txt  upgrade_plan.md
docs/: README.md  dashboard.md  history.md  upgrade_plan.md
src/delta_robot_description/: CMakeLists.txt  package.xml
src/delta_robot_description/config/: delta_robot.rviz
src/delta_robot_description/launch/: JointStatePublisher.launch  PseudoArduino.launch
src/delta_robot_description/meshes/: base_link.STL  distal_link2.STL  distal_link3.STL  distal_link4.STL  distal_link5.STL  distal_link6.STL  platform_link.STL  proximal_link1.STL  proximal_link2.STL  proximal_link3.STL
src/delta_robot_description/urdf/: delta_robot.urdf
src/delta_robot_serial/: CMakeLists.txt  package.xml
src/delta_robot_serial/action/: PosTraj.action
src/delta_robot_serial/include/: direct_kinematics.h  inverse_kinematics.h  trajPlan_actionServer.hpp
src/delta_robot_serial/src/: delta_joint_pub.cpp  ikin_server.cpp  pseudo_arduino.cpp  trajPlan_actionServer.cpp
src/delta_robot_serial/srv/: Ikin.srv
src/delta_robot_ui/: package.xml  setup.cfg  setup.py
src/delta_robot_ui/config/: presets.yaml
src/delta_robot_ui/delta_robot_ui/: __init__.py  config.py  dashboard_node.py  models.py  ros_bridge.py  sequence_runner.py  server.py
src/delta_robot_ui/delta_robot_ui/static/: app.js  index.html  styles.css
src/delta_robot_ui/frontend/: .env.standalone  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
src/delta_robot_ui/frontend/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src/delta_robot_ui/frontend/src/api/: client.ts  index.ts  types.ts
src/delta_robot_ui/frontend/src/components/: RobotScene.tsx  SequencePanel.tsx  StatusBar.tsx  TargetControl.tsx
src/delta_robot_ui/frontend/src/standalone/: api.ts  engine.ts  kinematics.ts  presets.ts
src/delta_robot_ui/frontend/src/store/: dashboardStore.ts
src/delta_robot_ui/frontend/src/utils/: csv.ts
src/delta_robot_ui/launch/: dashboard.launch.py  dashboard_sim.launch.py
src/delta_robot_ui/scripts/: delta_robot_dashboard
