<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delta_robot_serial</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="adam-6awh6jl3xtaa2mx@todo.todo">adam-6awh6jl3xtaa2mx</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>action_msgs</build_depend>
  <depend>rcl_interfaces</depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>


  <build_depend>eigen</build_depend>
  <depend>rclcpp</depend>
  <depend>serial</depend>  
  <depend>sensor_msgs</depend>
  <exec_depend>socat</exec_depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
